// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea default render 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb hBBJiZ"
  >
    <div
      class="sc-egkSDF leasZd"
    >
      <textarea
        class="sc-gtLWhw jpkqNe"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea small 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb hBBJiZ"
  >
    <div
      class="sc-egkSDF leasZd"
    >
      <textarea
        class="sc-gtLWhw hLxVsq"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea with Label 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb hBBJiZ"
  >
    <div
      class="sc-dntaoT hYNaTL"
      data-testid="TextArea-label"
    >
      TextArea
    </div>
    <div
      class="sc-egkSDF leasZd"
    >
      <textarea
        class="sc-gtLWhw jpkqNe"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea with disabled 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb hBBJiZ"
  >
    <div
      class="sc-egkSDF bUWDbo"
      disabled=""
    >
      <textarea
        class="sc-gtLWhw hHAYCT"
        disabled=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea with display asBlock 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb hBBJiZ"
  >
    <div
      class="sc-dntaoT hYNaTL"
      data-testid="TextArea-label"
    />
    <div
      class="sc-egkSDF leasZd"
    >
      <textarea
        class="sc-gtLWhw jpkqNe"
      />
    </div>
    <div
      class="sc-fAUdSK CeDQe"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea with error 1`] = `
<DocumentFragment>
  <div
    class="sc-blHHSb hBBJiZ"
  >
    <div
      class="sc-dntaoT hYNaTL"
      data-testid="TextArea-label"
      error="no text"
    >
      TextArea
    </div>
    <div
      class="sc-egkSDF bklFls"
      error="no text"
    >
      <textarea
        class="sc-gtLWhw jpkqNe"
        error="no text"
      />
    </div>
    <div
      class="sc-fAUdSK iJytMv"
      error="no text"
    >
      no text
    </div>
  </div>
</DocumentFragment>
`;
